--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "url-loader": "^3.0.0"
   },
   "keywords": [
     "gatsby"
