--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.17",
+    "gatsby-plugin-typography": "^2.3.21",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.12",
     "prop-types": "^15.7.2",
@@ -20,6 +21,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-responsive-carousel": "^3.1.51",
+    "react-typography": "^0.16.19",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.4.1"
