updated mobile responsiveness

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-sharp": "^2.3.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-responsive-carousel": "^3.1.51",
