--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-pdf": "^4.1.0",
     "react-responsive-carousel": "^3.1.51",
     "react-typography": "^0.16.19",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
